# bazel-sveltekit-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
my-app/: BUILD.bazel  package.json  test.sh
