module(
    name = "bazel-sveltekit-example",
    version = "0.0.0",
    compatibility_level = 1,
)


bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "rules_nodejs", version = "6.2.0")

bazel_dep(name = "aspect_bazel_lib", version = "2.7.9", dev_dependency = True)

bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc10")
bazel_dep(name = "aspect_rules_ts", version = "2.2.0")

#####
# Node
# ====
#
# rules_nodejs devs recommend using aspect_rules_js for npm install (see https://github.com/bazelbuild/rules_nodejs/issues/3138),
# so here I'm just following their examples: https://github.com/aspect-build/rules_js/blob/main/MODULE.bazel
####
# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
# node.toolchain()  # Uses default version from https://github.com/bazelbuild/rules_nodejs/blob/main/nodejs/repositories.bzl#L19

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    bins = {
        # This is basically the "bin" entry from `node_modules/<package>/package.json`
        "vite": [
            "vite=./bin/vite",
        ],
        "vitest": [
            # "vitest=./bin/vitest",
            "vitest=./vitest.mjs",
        ],
    },
    data = [
        "//sandbox/svelte-social-app:package.json",
    ],
    # generate_bzl_library_targets = True,
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    # update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir $(pwd)/my-app install
use_repo(pnpm, "pnpm")